# api/router/expense-plan-record.go
@@ -8,4 +8,8 @@ import (
 
 func ExpensePlanRecordSetupRoutes(mux *http.ServeMux) {
 	mux.HandleFunc("/expense-plan-record/list", handler.ListExpensePlanRecord)
+	mux.HandleFunc("/expense-plan-record/get", handler.GetExpensePlanRecord)
+	mux.HandleFunc("/expense-plan-record/create", handler.CreateExpensePlanRecord)
+	mux.HandleFunc("/expense-plan-record/update", handler.UpdateExpensePlanRecord)
+	mux.HandleFunc("/expense-plan-record/delete", handler.DeleteExpensePlanRecord)
 }
